--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <img src="logo.jpg" alt="فيلم أكشن 6">
             <div class="movie-title">episode 6 </div>
             <div class="movie-description">.</div>
-            <a href="https://mosalsa132.github.io/S6/ class="watch-button">WATCH</a>
+            <a href="https://mosalsa132.github.io/S6/" class="watch-button">WATCH</a>
         </div>
         <div class="movie">
             <img src="logo.jpg" alt="فيلم أكشن 2">
